--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -29,7 +29,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
-      NEXT_PUBLIC_API_URL: ${{ secrets.NEXT_PUBLIC_API_URL }}
+      NEXT_PUBLIC_API_PATH: ${{ secrets.NEXT_PUBLIC_API_PATH }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
